--- a/EwQIMS_POM/pom.xml
+++ b/EwQIMS_POM/pom.xml
@@ -61,6 +61,12 @@
 			<version>1.2.17</version>
 		</dependency>
 		
+		<dependency>
+    <groupId>org.apache.xmlbeans</groupId>
+    <artifactId>xmlbeans</artifactId>
+    <version>2.6.0</version>
+</dependency>
+		
 		
 	</dependencies>
 
